# rainy-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  Rainy_CLI_最终形态程序设计与详细开发文档.md  SECURITY.md  deny.toml  rainy-defaults.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  release.yml  security.yml
community-packs/devcontainer/: pack.yaml
community-packs/devcontainer/capabilities/: devcontainer.yaml
community-packs/devcontainer/templates/devcontainer/: devcontainer.json.hbs
community-packs/docker-compose-local/: pack.yaml
community-packs/docker-compose-local/capabilities/: docker-compose-local.yaml
community-packs/github-actions-ci/: pack.yaml
community-packs/github-actions-ci/capabilities/: github-actions-ci.yaml
community-packs/helm-k8s-draft/: pack.yaml
community-packs/helm-k8s-draft/capabilities/: helm-k8s-draft.yaml
community-packs/helm-k8s-draft/templates/chart/: Chart.yaml.hbs  values.yaml.hbs
community-packs/minio-file-storage/: pack.yaml
community-packs/minio-file-storage/capabilities/: minio-file-storage.yaml
community-packs/minio-file-storage/templates/backend/: FileController.java.hbs  FileStorageProperties.java.hbs  StorageService.java.hbs
community-packs/minio-file-storage/templates/compose/: minio-service.yaml.hbs
community-packs/nextjs-admin/: pack.yaml
community-packs/nextjs-admin/capabilities/: nextjs-admin.yaml
community-packs/oidc-keycloak/: pack.yaml
community-packs/oidc-keycloak/capabilities/: oidc-keycloak.yaml
community-packs/openapi-contract/: pack.yaml
community-packs/openapi-contract/capabilities/: openapi-contract.yaml
community-packs/opentelemetry/: pack.yaml
community-packs/opentelemetry/capabilities/: opentelemetry.yaml
community-packs/postgres/: pack.yaml
community-packs/postgres/capabilities/: postgres.yaml
community-packs/redis/: pack.yaml
community-packs/redis/capabilities/: redis.yaml
community-packs/spring-boot-web/: pack.yaml
community-packs/spring-boot-web/capabilities/: spring-boot-web.yaml
crates/rainy-cli/: Cargo.toml
crates/rainy-cli/assets/: frontend-pnpm-lock.yaml
crates/rainy-cli/src/: actions.rs  agent.rs  audit.rs  bundled_assets.rs  cli.rs  config.rs  conformance.rs  defaults.rs  doctor.rs  error.rs  evidence.rs  init.rs  main.rs  output.rs  patch.rs  plugin.rs  policy.rs  progress.rs  registry.rs  schema.rs  skills.rs  update.rs  verify.rs
crates/rainy-cli/tests/: e2e.rs
docs/: architecture-and-flow.md  capability-pack-authoring.md  cli-output-style.md  command-reference.md  enterprise-git-authoring.md  enterprise-integration.md  plugin-protocol.md  release-mirrors.md  releasing.md  skills-management.md
examples/enterprise/: README.md
examples/enterprise/project/: rainy.yaml
integrations/backstage/: README.md
integrations/backstage/actions/: rainy-actions.ts
integrations/backstage/templates/: rainy-spring-nextjs-saas.yaml
integrations/mcp/: README.md  rainy_mcp.py
integrations/skills/rainy-cli/: SKILL.md
integrations/skills/rainy-comet/: SKILL.md
schemas/: audit.schema.json  capability-lock.schema.json  capability-pack.schema.json  capability.schema.json  changeset.schema.json  conformance-report.schema.json  doctor-report.schema.json  evidence.schema.json  org-policy.schema.json  pack-signature.schema.json  plan.schema.json  plugin-manifest.schema.json  plugin-rpc-response.schema.json  rainy-defaults.schema.json  rainy-project.schema.json  registry-index.schema.json  registry-lock.schema.json  registry-report.schema.json  schema-validation-report.schema.json  skill-lock.schema.json  skill-profile.schema.json  skill-report.schema.json  update-report.schema.json  verify-report.schema.json
scripts/: check-release-version.sh  install.ps1  install.sh  publish-oss.sh  test-install.ps1  test-install.sh  test-installer-server.py  test-mcp.sh  test-publish-oss.sh  test-release.sh  test-skill.ps1  test-skill.sh
(+20 files in other folders)
