[package]
name = "rainy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rainy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
globset.workspace = true
handlebars.workspace = true
similar.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
wasmtime.workspace = true

[dev-dependencies]
tempfile = "3.20"
wat = "1.239"
