[package]
name = "rainy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rainy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
flate2.workspace = true
globset.workspace = true
fs2.workspace = true
handlebars.workspace = true
include_dir.workspace = true
jsonschema.workspace = true
similar.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
semver.workspace = true
thiserror.workspace = true
toml.workspace = true
tar.workspace = true
ureq.workspace = true
walkdir.workspace = true
wasmtime.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3.20"
wat = "1.239"
